--- a/public/prof_dashboard.html
+++ b/public/prof_dashboard.html
@@ -510,12 +510,9 @@ function base64ToBlob(b64) {
 }
 
 async function initPeerConnection() {
-  if (pc) {
-    console.log('⚠️ RTCPeerConnection déjà existante');
-    return;
-  }
+  if (pc) return;
   
-  console.log('🔄 Création RTCPeerConnection (prof)...');
+  console.log('🔄 Création RTCPeerConnection...');
   
   pc = new RTCPeerConnection({
     iceServers: [
@@ -543,42 +540,82 @@ async function initPeerConnection() {
   });
 
   try {
-    console.log('🎤 Demande accès caméra/micro (prof)...');
+    console.log('🎤 Demande accès caméra/micro...');
     localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-    console.log('✅ Flux local obtenu (prof)');
+    console.log('✅ Flux local obtenu');
     document.getElementById('localVideo').srcObject = localStream;
-    localStream.getTracks().forEach(t => {
-      console.log('📹 Track ajouté:', t.kind);
-      pc.addTrack(t, localStream);
-    });
+    localStream.getTracks().forEach(t => pc.addTrack(t, localStream));
   } catch (err) {
-    console.error('❌ Erreur caméra (prof):', err);
-    alert('Erreur caméra: ' + err.message);
+    console.error('❌ Erreur caméra:', err);
+    alert('Impossible d\'accéder à la caméra/micro: ' + err.message);
     return;
   }
 
   pc.ontrack = (ev) => {
-    console.log('🎥 Flux distant reçu (prof):', ev.streams);
+    console.log('🎥 Flux distant reçu:', ev.streams);
     if (ev.streams && ev.streams[0]) {
-      console.log('✅ Assignation vidéo distante');
       document.getElementById('remoteVideo').srcObject = ev.streams[0];
     }
   };
 
   pc.onicecandidate = (ev) => {
-    if (ev.candidate && currentEleve && ws && ws.readyState === WebSocket.OPEN) {
-      console.log('📤 Envoi ICE candidate (prof)');
-      ws.send(JSON.stringify({ type: 'ice', target: currentEleve, candidate: ev.candidate }));
+    if (ev.candidate && profSelected && ws && ws.readyState === WebSocket.OPEN) {
+      console.log('📤 ICE candidate:', ev.candidate.candidate);
+      ws.send(JSON.stringify({ type: 'ice', target: profSelected, candidate: ev.candidate }));
     }
   };
 
   pc.onconnectionstatechange = () => {
-    console.log('🔗 Connexion état (prof):', pc.connectionState);
+    console.log('🔗 Connection state:', pc.connectionState);
+    if (pc.connectionState === 'connected' || pc.connectionState === 'completed') {
+      console.log('✅✅✅ CONNEXION RÉUSSIE ✅✅✅');
+    }
+    if (pc.connectionState === 'failed') {
+      console.error('❌ Connexion échouée');
+      console.log('ICE Connection State:', pc.iceConnectionState);
+      console.log('ICE Gathering State:', pc.iceGatheringState);
+      console.log('Signaling State:', pc.signalingState);
+    }
+  };
+
+  pc.onicegandidatefailed = (ev) => {
+    console.error('❌ ICE candidate échoué:', ev);
+  };
+
+  pc.oniceerror = (ev) => {
+    console.error('❌ ICE error:', ev);
   };
 
   pc.onsignalingstatechange = () => {
-    console.log('📡 Signaling état (prof):', pc.signalingState);
+    console.log('📡 Signaling state:', pc.signalingState);
   };
+
+  pc.oniceconnectionstatechange = () => {
+    console.log('🧊 ICE connection state:', pc.iceConnectionState);
+  };
+
+  pc.onicegatheringstatechange = () => {
+    console.log('📍 ICE gathering state:', pc.iceGatheringState);
+  };
+
+  if (!ws || ws.readyState !== WebSocket.OPEN) {
+    console.error('❌ WebSocket non connecté');
+    return;
+  }
+
+  try {
+    console.log('📝 Création offre...');
+    const offer = await pc.createOffer({ 
+      offerToReceiveAudio: true, 
+      offerToReceiveVideo: true 
+    });
+    await pc.setLocalDescription(offer);
+    console.log('✅ Offre créée');
+    ws.send(JSON.stringify({ type: 'offer', target: profSelected, offer: offer }));
+    console.log('✅ Offre envoyée');
+  } catch (err) {
+    console.error('❌ Erreur création offre:', err);
+  }
 }
 
 document.getElementById('chatInput')?.addEventListener('keypress', (e) => {
