--- a/public/eleve_dashboard.html
+++ b/public/eleve_dashboard.html
@@ -481,30 +481,13 @@ async function initPeerConnection() {
   
   console.log('🔄 Création RTCPeerConnection...');
   
-  pc = new RTCPeerConnection({
-    iceServers: [
-      { urls: 'stun:stun.l.google.com:19302' },
-      { urls: 'stun:stun1.l.google.com:19302' },
-      { urls: 'stun:stun2.l.google.com:19302' },
-      { urls: 'stun:stun3.l.google.com:19302' },
-      { urls: 'stun:stun4.l.google.com:19302' },
-      {
-        urls: 'turn:openrelay.metered.ca:80',
-        username: 'openrelay',
-        credential: 'openrelay'
-      },
-      {
-        urls: 'turn:openrelay.metered.ca:443',
-        username: 'openrelay',
-        credential: 'openrelay'
-      },
-      {
-        urls: 'turn:openrelay.metered.ca:443?transport=tcp',
-        username: 'openrelay',
-        credential: 'openrelay'
-      }
-    ]
-  });
+ // 🔑 Récupération automatique des serveurs TURN depuis Metered
+const response = await fetch("https://urgencescolaire.metered.live/api/v1/turn/credentials?apiKey=a3f837be01a24c3ef83581addd77fc75cc48");
+const iceServers = await response.json();
+
+pc = new RTCPeerConnection({
+    iceServers: iceServers
+});
 
   try {
     console.log('🎤 Demande accès caméra/micro...');
