Fix: réactiver bouton quand élève refait une demande

--- a/public/prof_dashboard.html
+++ b/public/prof_dashboard.html
@@ -200,6 +200,10 @@ function initWebSocket() {
       
       if (data.type === 'appelEnAttente') {
         allAppels = data.appels || [];
+        // 🔧 Retirer les élèves en attente du Set des désactivés
+        allAppels.forEach(a => {
+          disabledElevesAfterCall.delete(a.eleve);
+        });
         populateFilters();
         filterWaiting();
       }
