Dernières modifications du dashboard professeur

--- a/public/prof_dashboard.html
+++ b/public/prof_dashboard.html
@@ -59,6 +59,17 @@ button { padding: 8px 12px; border: none; border-radius: 6px; cursor: pointer; f
 .filter-section { margin-bottom: 12px; padding: 12px; background: #f0f7ff; border-radius: 4px; display: flex; gap: 8px; align-items: center; flex-wrap: wrap; }
 .filter-section select { padding: 6px 10px; border: 1px solid #ddd; border-radius: 4px; font-size: 12px; }
 hr { border: none; border-top: 1px solid #eee; margin: 16px 0; }
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
 </style>
 </head>
 <body>
